--- a/phase3-demo-game/package.json
+++ b/phase3-demo-game/package.json
@@ -15,9 +15,13 @@
 	},
 	"homepage": "https://github.com/ourcade/phaser3-parcel-template",
 	"devDependencies": {
+		"eslint": "^6.8.0",
+		"eslint-config-airbnb-base": "^14.1.0",
+		"eslint-config-google": "^0.14.0",
+		"eslint-plugin-import": "^2.20.2",
+		"minimist": ">=1.2.2",
 		"parcel-plugin-clean-easy": "^1.0.2",
-		"parcel-plugin-static-files-copy": "^2.2.1",
-		"minimist": ">=1.2.2"
+		"parcel-plugin-static-files-copy": "^2.2.1"
 	},
 	"dependencies": {
 		"phaser": "^3.22.0"
